--- a/tasks/Config/linux/RedHat/6/Service.yml
+++ b/tasks/Config/linux/RedHat/6/Service.yml
@@ -8,6 +8,7 @@
   poll: 0
   with_items:
     - "{{ vars['disable_service_' + ansible_os_family + '_' + ansible_distribution_major_version] }}"
+  when: os_linux_disable_unused_service
   ignore_errors: yes
 
 - name: Ensure used service is enabled
@@ -19,4 +20,5 @@
   poll: 0
   with_items:
     - "{{ vars['enabled_service_' + ansible_os_family + '_' + ansible_distribution_major_version] }}"
+  when: os_linux_enables_needed_service
   ignore_errors: yes
