--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,75 +1,72 @@
 ---
-# General parameters #
-ansible_user: 'oper'
-os_update_password: 'Password1234'
-os_proxy_server: 'http://1.1.1.1:3142' # Defines the proxy server.
-os_syslog: false # Whether to use remote syslog server.
-os_syslog_server: '1.1.1.1' # Defines the address of a syslog server.
-os_syslog_port: '12209' # Defines the input port of a syslog server.
-os_disable_ipv6: true # Whether to turn off IPV6.
-os_pass_length: '12' # Minimum OS account password length.
-os_pass_maxAge: '60' # OS account Password Validity Period.
-os_audit: true # Whether to enable OS auditing.
-os_software: true # Whether to install basic software and update.
-os_harden: true # Whether harden system.
-os_config: true # Whether to enable initialization configuration.
-os_datadisc: true # Whether to mount the data disk after the guest VM is deployed.
+# 通用参数 #
+os_audit: true # 是否启用主机审计。
+os_config: true # 是否执行主机初始配置。
+os_datadisc: true # 是否挂载数据盘。
+os_disable_ipv6: true # 是否关闭IPv6。
+os_harden: true # 是否执行主机加固配置。
+os_pass_length: '12' # 账户最低密码长度。
+os_pass_maxAge: '60' # Windows主机账户密码有效期。
+os_proxy_server: 'http://1.1.1.1:3142' # 主机代理服务器。
+os_software: true # 是否执行主机基本软件安装。
+os_syslog: false # 是否启用远程日志。
+os_syslog_port: '12209' # 远程日志服务器端口。
+os_syslog_server: '1.1.1.1' # 远程日志服务器地址。
+os_update_password: 'bguM7WftNdrP' # 修改新部署Linux主机管理账户密码。
 
-# Linux OS data disc parameter #
-os_linux_disc_device: '/dev/sdb'
-os_linux_mount_point: '/data'
-os_linux_vg: 'VolGroup01'
-os_linux_lv: 'lv_data'
-os_linux_lv_size: '100%FREE'
-os_linux_fstype: 'xfs'
-os_linux_fsopts: 'defaults,noatime,nobarrier'
+# Linux 数据盘参数 #
+os_linux_disc_device: '/dev/sdb' # 数据盘块设备。
+os_linux_fsopts: 'defaults,noatime,nobarrier' # 数据盘挂载参数。
+os_linux_fstype: 'xfs' # 数据盘文件系统。
+os_linux_lv: 'lv_data' # 逻辑卷名称。
+os_linux_lv_size: '100%FREE' # 逻辑卷容量。
+os_linux_mount_point: '/data' # 逻辑卷挂载点。
+os_linux_vg: 'VolGroup01' # 逻辑卷卷组名称。
 
-# Linux OS parameter #
-os_linux_ulimit_nofile: '20480'
-os_linux_ulimit_nproc: '20480'
-os_linux_tz: 'Asia/Shanghai'
-os_linux_MTA_relayhost: '1.1.1.1'
-os_linux_grub_add_args:
+# Linux 系统参数 #
+os_linux_disable_fs_exec_flags: 'rw,nosuid,nodev,noexec,relatime' # 磁盘分区安全挂载参数。
+os_linux_disable_fs_home_exec: false # /home 挂载点分区是否启用安全挂载参数。
+os_linux_disable_fs_shm_exec: true # /dev/shm 挂载点分区是否启用安全挂载参数。
+os_linux_disable_fs_tmp_exec: false # /tmp 挂载点分区是否启用安全挂载参数。
+os_linux_disable_fs_vartmp_exec: false # /var/tmp 挂载点分区是否启用安全挂载参数。
+os_linux_disable_RootLogin: true # 是否禁用root登录。
+os_linux_disable_selinux: true # 是否禁用selinux。
+os_linux_disable_sysstat_collect: true # 是否禁用sysstat监测。
+os_linux_disable_unused_module: true # 是否禁用不需要的模块。
+os_linux_disable_unused_service: true # 是否禁用不需要的服务。
+os_linux_enables_needed_service: true # 是否启用需要的服务。
+os_linux_grub_add_args: # GRUB新增参数。
   - 'ipv6.disable={% if os_disable_ipv6 %}1{% else %}0{% endif %}'
   - 'transparent_hugepage=never'
   - 'numa=off'
-os_linux_disable_unused_module: true
-os_linux_disable_unused_service: true
-os_linux_enables_needed_service: true
-os_linux_disable_sysstat_collect: true
-os_linux_disable_RootLogin: true
-os_linux_disable_selinux: true
-os_linux_id_rsa: ''
-os_linux_syslog_local_keep: '2' # week
-os_linux_disable_fs_tmp_exec: false
-os_linux_disable_fs_vartmp_exec: false
-os_linux_disable_fs_shm_exec: true
-os_linux_disable_fs_home_exec: false
-os_linux_disable_fs_exec_flags: 'rw,nosuid,nodev,noexec,relatime'
+os_linux_id_rsa: '' # 主机SSH密钥。
+os_linux_MTA_relayhost: '1.1.1.1' # 邮件中继服务器地址。
+os_linux_syslog_local_keep: '2' # 本地日志保留期(周)。
+os_linux_tz: 'Asia/Shanghai' # 主机时区。
+os_linux_ulimit_nofile: '20480' # 会话打开的文件/文件描述符的最大数目。
+os_linux_ulimit_nproc: '20480' # 会话打开的系统进程的最大数目。
 
-# Windows OS parameter
-os_win_roles:
-  - 'Telnet-Client'
-os_win_software:
-  - 'googlechrome'
-  - 'notepadplusplus.install'
-  - 'nxlog'
-  - 'peazip.install'
-os_win_update_category: ['CriticalUpdates', 'SecurityUpdates']
-os_win_disable_rss: true
-os_win_pagefile_size: 4096
-os_win_tz: 'China Standard Time'
-os_win_location: '45' # https://docs.microsoft.com/en-us/windows/desktop/Intl/table-of-geographical-locations
-os_win_format: 'en-US'
-os_win_unicode: 'zh-CN'
-os_win_network_location: 'Private'
-os_win_event_log_MaxSize: '4096' # The maximum size in kilobytes that the event log can grow to.
-os_win_event_log:
+# Windows 系统参数 #
+os_win_disable_rss: true # 是否禁用Receive-Side Scaling。
+os_win_disable_task: # 需要关闭的系统任务调度程序。
+  - 'ScheduledDefrag'
+  - 'ServerManager'
+os_win_event_log: # 需要配置的系统事件日志。
   - 'Application'
   - 'Security'
   - 'Setup'
   - 'System'
-os_win_gpo_audit_policy:
+os_win_event_log_MaxSize: '4096' # 本地系统事件日志的最大容量(KB)。
+os_win_format: 'en-US' # 主机语言格式
+os_win_fs_audit_rule: # 文件系统审计规则。
+  - 'AppendData'
+  - 'CreateDirectories'
+  - 'CreateFiles'
+  - 'Delete'
+  - 'DeleteSubdirectoriesAndFiles'
+  - 'WriteData'
+os_win_fs_audit_user: 'Everyone' # 文件系统审计账户名。
+os_win_gpo_audit_policy: # 组审计策略。
   - 'Account Logon'
   - 'Logon/Logoff'
   - 'Account Management'
@@ -77,14 +74,16 @@ os_win_gpo_audit_policy:
   - 'Object Access'
   - 'Policy change'
   - 'Privilege use'
-os_win_fs_audit_user: 'Everyone'
-os_win_fs_audit_rule:
-  - 'AppendData'
-  - 'CreateDirectories'
-  - 'CreateFiles'
-  - 'Delete'
-  - 'DeleteSubdirectoriesAndFiles'
-  - 'WriteData'
-os_win_disable_task:
-  - 'ScheduledDefrag'
-  - 'ServerManager'
+os_win_location: '45' # 主机地理位置。https://docs.microsoft.com/en-us/windows/desktop/Intl/table-of-geographical-locations
+os_win_network_location: 'Private' # 网络位置。Private / Public
+os_win_pagefile_size: 4096 # 虚拟内存页面文件容量(MB)。
+os_win_roles: # 需要安装的系统组件。
+  - 'Telnet-Client'
+os_win_software: # 需要安装的第三方软件。
+  - 'googlechrome'
+  - 'notepadplusplus.install'
+  - 'nxlog'
+  - 'peazip.install'
+os_win_tz: 'China Standard Time' # 主机时区。
+os_win_unicode: 'zh-CN' # 主机字符集编码。
+os_win_update_category: ['CriticalUpdates', 'SecurityUpdates'] # 需要更新的类别列表。
