--- a/tasks/Software/Win32NT.yml
+++ b/tasks/Software/Win32NT.yml
@@ -7,12 +7,18 @@
     - '{{ os_win_roles }}'
   ignore_errors: yes
 
-- name: install_chocolatey
+- name: Install chocolatey
   win_chocolatey:
     name: 'chocolatey'
     state: 'downgrade'
     version: '0.10.11'
     proxy_url: '{{ os_proxy_server | default(omit,true) }}'
+  register: chocolatey_status
+  until: chocolatey_status is succeeded
+  retries: 10
+  delay: 6
+  changed_when: false
+  failed_when: false
 
 - name: 'Third party software installation'
   win_chocolatey:
@@ -22,7 +28,12 @@
     proxy_url: '{{ os_proxy_server | default(omit,true) }}'
   with_items:
     - '{{ os_win_software }}'
-  ignore_errors: yes
+  register: os_win_software_status
+  until: os_win_software_status is succeeded
+  retries: 10
+  delay: 6
+  changed_when: false
+  failed_when: false
 
 - name: Install security updates
   win_updates:
