--- a/tasks/Exporter/Linux.yml
+++ b/tasks/Exporter/Linux.yml
@@ -38,12 +38,11 @@
 
 - name: Node exporter firewall operation
   firewalld:
-    port: "{{ item }}/tcp"
+    port: "{{ node_exporter_port }}/tcp"
     zone: 'public'
     permanent: 'true'
     immediate: 'true'
     state: 'enabled'
-  loop: '{{ node_exporter_port }}'
   when: 
     - ansible_distribution_major_version|int > 6
     - soft_updated is changed or soft_config is changed
