--- a/tasks/Exporter/Win32NT.yml
+++ b/tasks/Exporter/Win32NT.yml
@@ -76,7 +76,7 @@
   loop: '{{ consul_public_clients|flatten(levels=1) }}'
   when: consul_public_register
   register: register_status
-  until: register_status.status == 200
+  until: register_status.status_code == 200
   retries: 3
   delay: 3
   no_log: true
