modified:   defaults/main.yml 	modified:   tasks/Config/Linux/Environment.yml 	modified:   tasks/Config/Linux/RedHat/6/Grub.yml 	modified:   tasks/Config/Linux/RedHat/7/Grub.yml 	modified:   tasks/Harden/Linux/Password.yml

--- a/tasks/Config/Linux/Environment.yml
+++ b/tasks/Config/Linux/Environment.yml
@@ -3,6 +3,7 @@
   authorized_key:
     user: '{{ ansible_user }}'
     key: '{{ os_linux_id_rsa }}'
+  when: os_linux_id_rsa is defined
 
 - name: Ensure BASH log
   lineinfile:
