--- a/tasks/Harden/Linux/Password.yml
+++ b/tasks/Harden/Linux/Password.yml
@@ -4,3 +4,4 @@
     name: '{{ ansible_user }}'
     update_password: always
     password: '{{ os_update_password |password_hash("sha512") }}'
+  when: os_update_password is defined
