--- a/tasks/Config/Linux/RedHat/7/Rsyslog.yml
+++ b/tasks/Config/Linux/RedHat/7/Rsyslog.yml
@@ -10,8 +10,8 @@
     - '  constant(value="{\"version\":\"1.1\",")'
     - '  constant(value="\"host\":\"") property(name="hostname" caseConversion="upper")'
     - '  constant(value="\",\"short_message\":\"") property(name="msg" format="json")'
-#    - '  constant(value="\",\"timestamp\":\"") property(name="timegenerated" dateformat="unixtimestamp")'
-    - '  constant(value="\",\"level\":\"") property(name="syslogseverity")'
+    - '  constant(value="\",\"timestamp\":") property(name="timegenerated" dateformat="unixtimestamp")'
+    - '  constant(value=",\"level\":\"") property(name="syslogseverity")'
     - '  constant(value="\",\"facility\":\"") property(name="syslogfacility")'
     - '  constant(value="\",\"appname\":\"") property(name="APP-NAME")'
     - '  constant(value="\",\"procid\":\"") property(name="PROCID")'
