--- a/tasks/Config/Linux/Environment.yml
+++ b/tasks/Config/Linux/Environment.yml
@@ -93,3 +93,16 @@
   with_items:
     - "IP=$(/sbin/ifconfig eth0|awk '/inet / {print $2}'|cut -d ':' -f 2)"
     - 'export PS1="[\[\033[01;31m\]\u\[\033[00m\]@\[\033[01;32m\]\h\[\033[00m\] \[\033[01;36m\]\$IP \[\033[01;33m\]\W\[\033[00m\]]\[\033[00;34m\]$\[\033[00m\]"'
+
+- name: Network interfaces parameter script transfer
+  copy:
+    src: 'ifup-local'
+    dest: '/sbin/ifup-local'
+    owner: 'root'
+    group: 'root'
+    mode: 0755
+  when: os_linux_disable_tcp_offloading
+
+- name: Set its SELinux context
+  shell: chcon --reference /sbin/ifup /sbin/ifup-local
+  when: os_linux_disable_tcp_offloading
