--- a/tasks/Config/Linux.yml
+++ b/tasks/Config/Linux.yml
@@ -4,7 +4,7 @@
 - include: '{{ ansible_system }}/{{ ansible_os_family }}/{{ ansible_distribution_major_version }}/Service.yml'
 
 - include: '{{ ansible_system }}/{{ ansible_os_family }}/{{ ansible_distribution_major_version }}/Rsyslog.yml'
-  when: os_syslog
+  when: gelf_syslog
 
 - include: '{{ ansible_system }}/Environment.yml'
 
