modified:   README.md 	modified:   defaults/main.yml 	modified:   tasks/Config/Linux.yml 	modified:   tasks/Config/Linux/RedHat/6/Rsyslog.yml 	modified:   tasks/Config/Linux/RedHat/7/Rsyslog.yml 	modified:   tasks/Config/Win32NT.yml 	modified:   templates/nxlog.conf.j2

--- a/tasks/Config/Linux.yml
+++ b/tasks/Config/Linux.yml
@@ -4,7 +4,7 @@
 - include: '{{ ansible_system }}/{{ ansible_os_family }}/{{ ansible_distribution_major_version }}/Service.yml'
 
 - include: '{{ ansible_system }}/{{ ansible_os_family }}/{{ ansible_distribution_major_version }}/Rsyslog.yml'
-  when: gelf_syslog
+  when: syslog
 
 - include: '{{ ansible_system }}/Environment.yml'
 
