--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -23,10 +23,10 @@ consul_public_clients: # 公共领事公共客户端列表。
   - '127.0.0.1'
 
 # 远程日志参数 #
-gelf_syslog: false # 是否启用远程日志。
-gelf_syslog_port: '12201' # 远程日志服务器端口。
-gelf_syslog_protocol: 'udp' # 远程日志服务器协议。
-gelf_syslog_server: # 远程日志服务器地址列表。
+syslog: false # 是否启用远程日志。
+syslog_port: '12201' # 远程日志服务器端口。
+syslog_protocol: 'udp' # 远程日志服务器协议。
+syslog_server: # 远程日志服务器地址列表。
   - '127.0.0.1'
 
 # Linux 数据盘参数 #
