--- a/tasks/Config/Linux/RedHat/6/Rsyslog.yml
+++ b/tasks/Config/Linux/RedHat/6/Rsyslog.yml
@@ -34,7 +34,7 @@
     - '  constant(value="\",\"procid\":\"") property(name="PROCID")'
     - '  constant(value="\"}")'
     - '}'
-    - 'action(type="omfwd" target="{{ syslog_server | list | random }}" port="{{ syslog_port }}" protocol="{{ syslog_protocol }}" template="gelf")'
+    - 'action(type="omfwd" target="{{ syslog_server | list | random }}" port="{{ syslog_port }}" protocol="{{ syslog_protocol | lower }}" template="gelf")'
   register: conf_update
 
 - name: Reload rsyslog service
