modified:   defaults/main.yml 	new file:   files/osquery.conf 	new file:   handlers/RedHat.yml 	modified:   handlers/main.yml 	new file:   tasks/OSSec/Linux.yml 	new file:   tasks/OSSec/Linux/RedHat.yml 	new file:   tasks/OSSec/Linux/configureation.yml 	new file:   tasks/OSSec/Linux/osquery.yml 	new file:   tasks/OSSec/Win32NT.yml 	modified:   tasks/main.yml 	new file:   templates/local_internal_options.conf.j2 	new file:   templates/ossec.conf.j2 	modified:   vars/RedHat.yml

--- a/vars/RedHat.yml
+++ b/vars/RedHat.yml
@@ -1,10 +1,25 @@
 ---
-epel_repo_name: "epel"
+epel_repo_name: 'epel'
 epel_repo_url: 'http://mirrors.aliyun.com/epel/{{ ansible_distribution_major_version }}/$basearch/'
 
-rsyslog_repo_name: "rsyslog"
+rsyslog_repo_name: 'rsyslog'
 rsyslog_repo_url: 'http://rpms.adiscon.com/v8-stable/epel-$releasever/$basearch'
 rsyslog_packages: 'rsyslog'
+
+ossec_repo_name: 'wazuh'
+ossec_repo_url: 'http://cache.omygods.com/wazuh/{{ ossec_version.split(".")[0] }}.x/yum'
+
+osquery_repo_name: 'osquery'
+osquery_repo_url: 'http://cache.omygods.com/osquery'
+
+ossec_agent_dependent_packages:
+  - 'expect'
+  - 'openscap-scanner'
+  - 'openssl'
+  - 'osquery'
+
+ossec_agent_packages:
+  - 'wazuh-agent-{{ ossec_version }}*'
 
 disable_service_RedHat_6: # 版本6不需要的服务。
   - 'abrt-ccpp'
