--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,3 +1,3 @@
 ---
-- name: Generate RHEL7 new grub config
-  shell: grub2-mkconfig -o /etc/grub2.cfg
+- include: 'RedHat.yml'
+  when: ansible_os_family == 'RedHat'
