--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -86,3 +86,10 @@
         - not os_win_config_result.stat.exists
   when: os_config
   tags: config
+
+- name: Include OSSec tasks for specific OS
+  include: 'OSSec/{{ ansible_system }}.yml'
+  when:
+    - os_ossec
+    - not ossec_is_install or ossec_is_install is not defined
+  tags: ossec
