--- a/tasks/OSSec/Win32NT.yml
+++ b/tasks/OSSec/Win32NT.yml
@@ -1,1 +1,10 @@
 ---
+- name: Configuration the OSSEC agent
+  include: '{{ ansible_system }}/configureation.yml'
+
+- name: Reload the OSSEC agent service
+  win_service:
+    name: 'wazuh'
+    state: 'restarted'
+    start_mode: 'auto'
+  when: ossec_correct_version is not defined or ossec_agent_conf_udpate is changed or ossec_internal_conf_update is changed
